added user analytics endpoints
